--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Snake Game</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="/style.css">
 
 </head>
 <body>
@@ -11,7 +11,7 @@
 <h3>Simple Snake Game</h3>
 <canvas id="stage" height="400" width="520"></canvas>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="/script.js"></script>
 
 </body>
 </html>
